creusot/tests/should_fail/prusti/logic/expiry.stderr
error: expiry contract on logic function must use a concrete lifetime/home
 --> expiry.rs:5:1
  |
5 | #[after_expiry(*x == *result)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `after_expiry` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

